--- a/o_n2_ratio.yml
+++ b/o_n2_ratio.yml
@@ -27,7 +27,7 @@ fontfamily: monospace
 # output formatting purposes.
 
 # I/O FORMATTING
-output_format: SWX_WAM_IPE___output_ts__f__cyc_ts__.png
+output_format: O_N2_global___output_ts__f__cyc_ts__.png
 
 metadata_ts_format: "%Y%m%d_%H%M%S"
 
@@ -61,68 +61,19 @@ figsize:
 
 # nrows*ncols (shape[0]*shape[1]) should be >= to the total number of plots
 shape:
-  - 2
-  - 2
+  - 1
+  - 1
 
 # ordering of plots goes as if you were reading text: left to right, and
 # then top to bottom
 plots:
-  - visible: false
-      
   - visible: true
-    title: "Total Electron Content (TEC)"
-    variable: tec
-    cbar_label: "TECu"
+    title: "O/N$_2$ Ratio"
+    variable: o_n2_ratio
+    cbar_label: "ratio"
     nticks: 6
-    cmap: cividis
+    cmap: hot
     scale: 1.0
-    min: 0.
-    max: 30.
-    extend: max
-
-  - visible: true
-    title: "F2 Peak Electron Density (NmF2)"
-    variable: NmF2
-    cbar_label: "$10^{12}$ m$^{-3}$"
-    nticks: 5
-    cmap: viridis
-    scale: 1.e-12
-    min: 0.
-    max: 2.
-    extend: max
-  
-  - visible: true
-    title: "Maximum Usable Frequency (MUF)"
-    variable: "__MUF__"
-    nmf2_var: NmF2
-    hmf2_var: HmF2
-    ut_var: fcst_date
-    cbar_label: "MHz"
-    nticks: 6
-    cmap: jet
-    scale: 1.0
-    min: 0
-    max: 50
-    extend: max
-
-texts:
-  - text: "Valid at: __fcst_ts__"
-    x_loc: 0.25
-    y_loc: 0.78
-    size: 24
-    align: center
-  - text: "Global Ionosphere"
-    x_loc: 0.25
-    y_loc: 0.73
-    size: 18
-    align: center
-  - text: "Model: WAM-IPE (__runtype__) Init: __init_ts__"
-    x_loc: 0.25
-    y_loc: 0.68
-    size: 18
-    align: center
-  - text: "Space Weather Prediction Center"
-    x_loc: 0.015
-    y_loc: 0.03
-    size: 12
-    align: left
+    min: 0.4
+    max: 1.2
+    extend: both
