--- a/neutral_plots.yml
+++ b/neutral_plots.yml
@@ -29,10 +29,11 @@ fontfamily: monospace
 # Other reserved values:
 # __plot_vars__: the NetCDF variables plotted joined by "-"
 
-# I/O FORMATTING
-# note output_format will have everything but the extension upper-cased
+# if you format your variable in all uppercase (e.g. __MYVALUE__), the output
+# will be all uppercase as well, but the reference __myvalue_var__ should always
+# be lowercase.
 
-output_format: __runtype___WAM05_GLOBAL___plot_vars_____initoutput_ts_____fcstoutput_ts__.png
+output_format: __RUNTYPE_____MODEL____CADENCE___GLOBAL___PLOT_VARS_____INITOUTPUT_TS_____FCSTOUTPUT_TS__.png
 
 metadata_ts_format: "%Y%m%d_%H%M%S"
 
@@ -52,6 +53,10 @@ fcstoutput_ts_var: fcst_date
 fcstoutput_ts_format: "%Y%m%dT%H%M"
 
 runtype_var: run_type
+
+model_var: model
+
+cadence_var: cadence
 
 # PROJECTION
 # only valid type is PlateCarree for now
@@ -78,7 +83,7 @@ plots:
   - visible: false
   - visible: true
     title: "400km Neutral Density"
-    variable: iss_mass_density
+    variable: den400
     cbar_label: "10$^{-11}$ kg/m$^3$"
     nticks: 4
     cmap: inferno
@@ -99,7 +104,7 @@ plots:
   - visible: false
   - visible: true
     title: "O/N$_2$ Ratio"
-    variable: o_n2_ratio
+    variable: ON2
     cbar_label: "ratio"
     nticks: 6
     cmap: inferno
@@ -119,7 +124,7 @@ texts:
     y_loc: 0.73
     size: 18
     align: center
-  - text: "Model: WAM-IPE (__runtype__) Init: __init_ts__"
+  - text: "Model: WAM-IPE (__RUNTYPE__) Init: __init_ts__"
     x_loc: 0.25
     y_loc: 0.68
     size: 18
