--- a/anomaly_tec_muf.yml
+++ b/anomaly_tec_muf.yml
@@ -114,7 +114,7 @@ plots:
   - visible: true
     title: "Total Electron Content (TEC) Anomaly"
     variable: tec
-    cbar_label: "TEC"
+    cbar_label: "TECu"
     nticks: 6
     cmap: bwr
     scale: 1.0
@@ -137,7 +137,7 @@ plots:
     hmf2_var: HmF2
     ut_var: fcst_date
     init_var: start_date
-    cbar_label: "MUF"
+    cbar_label: "MHz"
     nticks: 6
     cmap: bwr
     scale: 1.0
